# provident

./: .bazelrc  .gitignore  .gitmodules  .swiftformat  .swiftlint.yml  .travis.yml  Package.swift  README.md  WORKSPACE.bazel  project.yml
.github/workflows/: build-and-test-ios12.yml  build-and-test-ios13.yml  build-and-test-ios14.yml  build-and-test-xcode12_4_ios12_4.yml  (+8 more)
Provident.xcodeproj/: project.pbxproj
ProvidentTests/: ProvidentTests.swift  TestData.swift
SampleApp/: .gitignore  .swiftlint.yml  BUILD.bazel  Cartfile  Cartfile.resolved  project-carthage.yml  project-spm.yml  project.yml
SampleApp/SampleApp/: AppDelegate.swift  Info.plist
SampleApp/SampleApp/Provident/: Navigation.swift  SampleViewControllerProvider.swift
SampleApp/SampleApp/UI/: LabelledTextField.swift  Navigation+Presentation.swift  SampleUI.swift
SampleApp/SampleApp/UI/Login/: LoginViewController.swift
SampleApp/SampleApp/UI/Logout/: LogoutViewController.swift
SampleApp/Source/: AppDelegate.swift
SampleApp/Source/Provident/: Navigation.swift  SampleResolver.swift  SampleServiceProvider.swift  SampleViewControllerProvider.swift  SwiftUIViewControllerProvider.swift
SampleApp/Source/Services/: AuthenticationService.swift  LoginService.swift  SampleService.swift
SampleApp/Source/UI/: LabelledTextField.swift  Navigation+Presentation.swift  SampleUI.swift
SampleApp/Source/UI/Error/: ErrorView.swift  ErrorViewController.swift  ErrorViewControllerProvider.swift  ErrorViewModel.swift
SampleApp/Source/UI/Login/: LoginView.swift  LoginViewController.swift  LoginViewControllerProvider.swift  LoginViewModel.swift
SampleApp/Source/UI/Logout/: LogoutView.swift  LogoutViewController.swift  LogoutViewControllerProvider.swift  LogoutViewModel.swift
Source/: BUILD.bazel  Platform.swift  Provident.h  Registrar.swift  Registry.swift  Resolver.swift  ServiceProvider.swift  ServiceProviderCreationContext.swift  ViewControllerProvider.swift
Tests/: .swiftlint.yml  BUILD.bazel  Platform+Testing.swift  RegistrarTests.swift  RegistryAPITests.swift  RegistryTests.swift  RegistryVoidContextTests.swift  ResolverTests.swift  TestData.swift  TestResolver.swift  UIViewController+Testing.swift  ViewControllerProviderTests.swift
Tests/Registry/: RegistrarTests.swift  RegistryAPITests.swift  RegistryTests.swift  RegistryVoidContextTests.swift
Tests/Resolver/: TestResolver.swift
(+20 files in other folders)
