load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "provident_test",
    srcs = glob(["*.swift"]),
    tags = ["manual"],
    deps = ["//Source:provident"],
    visibility = ["//visibility:private"],
    testonly = True
)

ios_unit_test(
    name = "provident_tests",
    deps = ["provident_test"],
    minimum_os_version = "16.0",
    families = ["iphone", "ipad"],
)